--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
+    "formik": "^2.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -22,7 +23,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
-    "react-navigation-stack": "^2.10.2"
+    "react-navigation-stack": "^2.10.2",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
